Added more information all over for OC stuff

--- a/src/content/docs/crescent/ftb.mdx
+++ b/src/content/docs/crescent/ftb.mdx
@@ -14,21 +14,25 @@ import Footer from '@components/Footer.astro'
 Forked Tower: Blood is the capstone raid released in 7.25 alongside Occult Crescent: South Horn. It features many difficult encounters designed for a minimum of 24 players to participate in.
 It features limited raising in both methods and a lives sytems along with more gimmicky mechanics that require the usage of specific Phantom Jobs such as Geomancer, Time Mage, and Thief.
 
+
 ### Required Phantom Jobs
-The list of required phantom jobs is really short. You just need a two time mages, thieves, geomancers, and a single berserker for specific sections. However, there are other jobs that aren't "required" but will definitely make
+The list of *actually mandatory* phantom jobs is really short. You just need a two time mages, thieves, geomancers, and a single berserker for specific mechanics/sections. However, there are other jobs that aren't "required" but will definitely make
 your experience much easier. In no particular order the following phantom jobs are strongly encouraged to be brought.
+
+<details>
+<summary>List and Explanation of Required Phantom Jobs</summary>
 - **Phantom Time Mage**:
-A required phantom job to complete Forked Tower: Blood. Needed for dispelling specific adds at various points in Forked Tower. Can also slow a majority of adds throughout Forked Tower.
+A required phantom job to complete Forked Tower: Blood. Needed for dispelling specific adds at Demon Tablet, Bridges, and Lockwards. Can also slow a majority of adds throughout Forked Tower.
 
 - **Phantom Geomancer**:
 A required phantom job to complete Forked Tower: Blood. Uses Levitate to walk over hazards during Hallways and the Bridges encounter.
 
 - **Phantom Bard**:
-A required phantom job to complete Forked Tower: Blood. Helps increase a party's damage but noteably uses Romeo's Ballad to stun the Tower Idols during the bridges encounter. If left unstunned,
+A required phantom job to complete Forked Tower: Blood. Helps increase a party's damage but noteably uses Romeo's Ballad to stun the Tower Idols during the Bridges encounter. If left unstunned,
 the Idols will instantly wipe the group.
 
 - **Phantom Berserker**:
-A required phantom job to complete Forked Tower: Blood. Used at Magitaur to kill the purple canister with their Rage ability to avoid being Hysteria'd for 60 seconds.
+A required phantom job to complete Forked Tower: Blood. Used at Magitaur to kill the purple canister with their Rage ability to avoid being afflicted with Hysteria for 60 seconds.
 
 - **Phantom Chemist**:
 This is your only method of raising outside of Healer Limit Break 3. Progression groups are reccomended to bring a LOT of these for safety.
@@ -44,7 +48,12 @@ A required phantom job to complete Forked Tower: Blood. Percepts hidden traps an
 Can safely detonate/pop traps (hidden or visible) with Occult Falcon. Commonly used to pop the unstable/mega traps hidden throughout, especially on Bridges, so players can safely move around.
 
 - **Phantom Cannoneer**:
-Free damage increase to the entire raid's damage through Silver Cannon.
+Free damage increase to the entire raid's damage through Silver Cannon's Silver Sickness.
+
+- **Phantom Samurai**: 
+Majority of players should be on this phantom job as it's the highest, most consistent DPS phantom job currently available. Using Zeninage in 2 minute bursts for insanely along with Iainuki whenever its available. 
+Iainuki can also be used in the Hallways and Lockwards sections to have a 10% chance to instantly kill a mob when hit.  
+</details>
 
 ### Limited Raising and Lives
 While in Forked Tower: Blood you a Resurrection Restricted debuff will be placed on participants. This debuff starts at three stacks and act as your "lives" while inside the Forked Tower.
@@ -65,9 +74,9 @@ Both methods will consume 1 life and the healer limit break 3 does *__not__* cir
 
 ## Preparing for Forked Tower: Blood
 Getting ready to enter Forked Tower: Blood requires you to complete a list of objectives before even considering entering the Forked Tower.
-1. Complete the "Past and Crescent" quest just past the point of winning in the "Calamity Bound" Critical Engagement.
+1. Complete the "Past and Crescent" quest just past the point of completing the "Calamity Bound" Critical Engagement.
 2. Reach Knowledge Level 20
-3. Obtain a Sanguine Cipher (purchased with either Silver or Gold pieces) from the Expedition Antiquarian
+3. Obtain a Sanguine Cipher(s) (purchased with either Silver or Gold pieces) from the Expedition Antiquarian
 4. Fully level (or "master") a few different Phantom Jobs to fully unlock their kits and gain a few stacks of Phantom Mastery.
 5. (Optional) Obtain a few pieces of Arcanaut's gear for your preferred role(s).
 
