--- a/src/content/docs/crescent/occult.mdx
+++ b/src/content/docs/crescent/occult.mdx
@@ -11,6 +11,10 @@ import { Icon } from '@astrojs/starlight/components';
 import { Image } from 'astro:assets';
 import Footer from '@components/Footer.astro'
 
+:::danger[*This section is still a work in progress*]
+While information is here and accurate enough to be deployed, the page is not yet totally completed. Please check back later to see a fully completed page!
+:::
+
 Occult Crescent was released in 7.25 is Dawntrail's featured Field Operation similar to the likes of Eureka and Bozja. You will explore the island known as Shades' Triangle which takes inspiration from
 the legend of the real-world Bermueda Triangle.
 
@@ -31,9 +35,12 @@ To learn more about the different phantom jobs, please visit the page dedicated 
 Similar to Eureka/Bozja there is a separate leveling system, two this time actually. 
 
 There is your <u>Knowledge Level</u> acting as your overall, more general experience level gained from completing
-FATEs, Critical Engagements, and even chaining together mob kills at and/or around your or your party's overall level. This currently goes maxes out at 20 and only affects what mobs will or will not
-be aggressive when being near them. Your knowledge level also dictates which mobs are chainable by your party. If you wish to chain but your party's levels are all over the place, the party leader can choose
-to sync everyone's levels; allow chaining to be possible.
+FATEs, Critical Engagements, and even chaining together mob kills at and/or around your or your party's overall level. This currently goes maxes out at 20 and affects the following things: 
+1. what mobs will or will not be aggressive when being near them. 
+2. How much damage you will take/recieve from mobs of a higher/level lower.
+3. Dictates which mobs are "chainable".
+
+If you wish to chain but your party member's levels are uneven, the party leader can choose to sync everyone's levels; allow chaining to be possible.
 
 And there is a <u>Phantom Job Level</u> which is specific to the phantom job
 you currently have equipped. Leveling phantom jobs will not only unlock or upgrade your phantom actions but fully leveling, or "mastering", a phantom job will grant you a stacking mastery bonus for every mastered
@@ -44,6 +51,11 @@ phantom job. This mastery bonus will increase both your damage and healing poten
 ## FATEs and CEs
 Occult also draws parallels to Bozja in that there are smaller, faster encounters using the FATE system and then larger, more intense battles through Critical Engagements (CEs). It further mixes Eureka and Bozja
 together by allowing certain CEs to be "prepped" by killing a specific mob on the off chance it spawns an encounter. Currently, the CEs are mixed in that some spawn overtime and others spawn by prepping.
+
+What's important to note is that your Knowledge/Phantom Job level does **NOT** matter when participating in FATES and CEs. Anyone of any level can join and reap full rewards that scale to their knowledge level.
+
+To join a FATE simply walk up and engage with the FATE boss present. To join a Critical Engagement you must walk to the designated area and stand in the glowing blue circle. After the 3 minute
+recruitment period the CE will place everyone present into the encounter and begin combat.
 - [South Horn Critical Engagements](/crescent/southhorn#critical-engagements)
 - [South Horn FATEs](/crescent/southhorn#FATEs)
 
