--- a/src/content/docs/crescent/ocrelics.mdx
+++ b/src/content/docs/crescent/ocrelics.mdx
@@ -25,9 +25,37 @@ It was revealed in LiveLetter LXXXVII that the drop rates for the demiatmas are 
 - **FATEs**: 5% chance
 - **CEs**: 20% chance
 :::
+
+Here is a map showing which region of South Horn will grant what Demiatma and all the FATEs/CEs included in said region. 
+<Image
+    src="/oc/demiatmas.png"
+    width="600"
+    height="400"
+    decoding="async"
+    loading="eager"
+    alt="Demon Tablet Cheatsheet"
+    onclick="window.open('/oc/demiatmas.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+
+If you want to farm Demiatmas outside of the Occult Crescent you can get each type of Demiatma type based on what zone you're in.
+Refer to the table below to see which zone drops what Demiatma.
+<div style="display:flex; justify-content: center;">
+| Demiatma | Zone |
+| :--: | :--: |
+| Azurite | Urqopacha|
+| Verdigris | Kozama'uka|
+| Malachite | Yak T'el|
+|Realgar | Shaaloani|
+|Caput Mortuum | Heritage Found|
+|Orpiment | Living Memory| 
+</div>
 One you have obtains three of each type of the six demiatma, return to the Phantom Village and speak with Gerolt. From there the player can trade 500 uncapped level 100 tomestones
 for one *Arcanite;* three (1500 tomes total) of which are required to exchanged for you shiny new Penumbrae weapon. In total this step costs 31,500 tomes.
 
+<br></br>
+<hr></hr>
 ## 7.31: Umbrae Weapons
 To start this quest return to the Phantom Village and talk to Gerolt. They will task you with obtaining a handful of items from various places in Dawntrail zones. Specifically:
 1. Rroneek Glue Block from a vendor in Tuliyollal at (13.1, 12.7). It costs 300,000 gil.
@@ -66,6 +94,9 @@ Depsite this being the relic quest for Phantom Weapons: **No progress can be mad
 
 When the Aetherwells step is completed, return to the Phantom Village and speak to Gerolt. From there the player can trade 500 uncapped level 100 tomestones
 for one *Waxing Arcanite;* three of which (1500 tomes total), along with your Penumbrae weapon of choice, are required to exchanged for you shiny new Umbrae weapon. In total this step costs 31,500 tomes.
-
+<br></br>
+<hr></hr>
 ## 7.4x: ???
+<br></br>
+<hr></hr>
 ## 7.5x: ???
