--- a/src/content/docs/crescent/pjobs.mdx
+++ b/src/content/docs/crescent/pjobs.mdx
@@ -7,3 +7,7 @@ import { Aside } from '@astrojs/starlight/components';
 import { Icon } from '@astrojs/starlight/components';
 import { Image } from 'astro:assets';
 import Footer from '@components/Footer.astro'
+
+:::danger[*This section is still a work in progress*]
+While information is here and accurate enough to be deployed, the page is not yet totally completed. Please check back later to see a fully completed page!
+:::
