--- a/src/content/docs/crescent/southhorn.mdx
+++ b/src/content/docs/crescent/southhorn.mdx
@@ -10,8 +10,54 @@ import { Icon } from '@astrojs/starlight/components';
 import { Image } from 'astro:assets';
 import Footer from '@components/Footer.astro'
 
+:::danger[*This section is still a work in progress*]
+While information is here and accurate enough to be deployed, the page is not yet totally completed. Please check back later to see a fully completed page!
+:::
+
 This is the first zone of the Occult Crescent released in patch 7.25 and contains many FATEs, Critical Engagements, and the Forked Tower: Blood. This zone also contains the first half of the
 story and is not gated by completing the Forked Tower: Blood. 
+
+<br></br>
+<hr></hr>
+
+## Occult Records
+This section will spoil all survey points needed to fill out your Occult record book for progressing the story. Its always reccomended to try it yourself first before looking up a guide. 
+A helpful piece of advice is to do this early! Knowledge Level XP cannot be lost at level 5 or lower, so get those aetherytes and explore without a care!
+
+<details>
+<summary>All Survey Points for the Occult Record</summary>
+#### Story Required Survey Points
+- #7 The Lost Citadel - X: 31, Y: 17
+- #9 The Vanishing Slope - X: 20, Y: 12
+- #13 The Fell Warren - X: 10, Y: 22
+- #15 The Shadowed City - X: 24, Y: 32
+- #19 The Abandoned Ascent - X: 15, Y: 29
+
+#### Extra survey points
+- #2 The Phantom Village - X:6, Y:4 (this is actually in the Phantom Village)
+- #5 The Expedition Base Camp - X: 38, Y: 7
+- #12 Heathcliff - X: 23, Y: 21
+- #21 The Silent Streets - X: 36, Y: 33
+- #22 The Ancient Stoneworks - X: 36, Y:22
+- #23 The Wanderer's Haven - X: 3, Y: 5
+- #24 The Brazier - X: 8, Y: 35
+- #30 The Secluded Stacks - Found in the final room of the Forked Tower: Blood
+
+#### Visual Guide
+<Image
+    src="/oc/shsurveys.png"
+    width="600"
+    height="400"
+    decoding="async"
+    loading="eager"
+    alt="Survey Point visuals"
+    onclick="window.open('/oc/shsurveys.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+</details>
+
+Other records in your book can filled out via Field Notes. Which can be earned from completing FATEs, CEs, and clearing bosses in the Forked Tower: Blood.
 
 <br></br>
 <hr></hr>
@@ -161,7 +207,7 @@ Every successful FATE you complete with a **gold** rating will reward the follow
 <div style="display:flex; justify-content: center;">
 | FATE | Location | Noteable Drops |
 | :---: | :---: | :--: |
-| A Delicate Balance    | (X: 14, Y: 34) | | 
+| A Delicate Balance    | (X: 14, Y: 34) |
 | A Prying Eye          | (X: 20, Y: 32) |
 | An Uending Duty       | (X: 17, Y: 22) |
 | Brain Drain           | (X: 20, Y: 15) |
