--- a/src/content/docs/crescent/ftb.mdx
+++ b/src/content/docs/crescent/ftb.mdx
@@ -16,7 +16,7 @@ It features limited raising in both methods and a lives sytems along with more g
 
 
 ### Required Phantom Jobs
-The list of *actually mandatory* phantom jobs is really short. You just need a two time mages, thieves, geomancers, and a single berserker for specific mechanics/sections. However, there are other jobs that aren't "required" but will definitely make
+The list of *actually mandatory* phantom jobs is really short. You just need a two time mages, thieves, bards, geomancers, and a single berserker for specific mechanics/sections. However, there are other jobs that aren't "required" but will definitely make
 your experience much easier. In no particular order the following phantom jobs are strongly encouraged to be brought.
 
 <details>
@@ -31,6 +31,9 @@ A required phantom job to complete Forked Tower: Blood. Uses Levitate to walk ov
 A required phantom job to complete Forked Tower: Blood. Helps increase a party's damage but noteably uses Romeo's Ballad to stun the Tower Idols during the Bridges encounter. If left unstunned,
 the Idols will instantly wipe the group.
 
+- **Phantom Thief**:
+A required phantom job to complete Forked Tower: Blood. Percepts hidden traps and opens locked/hidden passages to help the group earn more Sanguinite.
+
 - **Phantom Berserker**:
 A required phantom job to complete Forked Tower: Blood. Used at Magitaur to kill the purple canister with their Rage ability to avoid being afflicted with Hysteria for 60 seconds.
 
@@ -41,17 +44,17 @@ This is your only method of raising outside of Healer Limit Break 3. Progression
 Provides a 10% damage mitigation for 30 minutes when using Pray near the knowledge crystal scattered throughout Forked Tower. Knights are also used to tank bosses, adds, and sometimes clear out
 traps due to their Pledge ability. Noteably knights are great at taking the Marble Dragon "Dread Deluge" buster and the Magitaur Cannister's "Arcane Recoil".
 
-- **Phantom Thief**:
-A required phantom job to complete Forked Tower: Blood. Percepts hidden traps and opens locked/hidden passages to help the group earn more Sanguinite.
-
 - **Phantom Ranger**:
 Can safely detonate/pop traps (hidden or visible) with Occult Falcon. Commonly used to pop the unstable/mega traps hidden throughout, especially on Bridges, so players can safely move around.
 
-- **Phantom Cannoneer**:
-Free damage increase to the entire raid's damage through Silver Cannon's Silver Sickness.
+- **Phantom Dancer**:
+Free damage increase to the entire raid's damage through Mesmerize's similarly named debuff. Can also increase their party's damage by 2% when using Quickstep near a knowledge crystal.
+
+- **Phantom Mystic Knight**:
+Free damage increase to the entire raid's damage through Blazing Spellblade's similarly named debuff.
 
 - **Phantom Samurai**: 
-Majority of players should be on this phantom job as it's the highest, most consistent DPS phantom job currently available. Using Zeninage in 2 minute bursts for insanely along with Iainuki whenever its available. 
+Majority of players should be on this phantom job as it's the highest, most consistent DPS phantom job currently available. Using Zeninage in 2 minute bursts along with Iainuki whenever its available. 
 Iainuki can also be used in the Hallways and Lockwards sections to have a 10% chance to instantly kill a mob when hit.  
 </details>
 
@@ -63,7 +66,7 @@ Ressurection Restricted will turn into a Ressurection Denied.
 From this point onwards, your next death is premanent. No method of raising can revive you and you are required to return out to Base Camp. Thus
 causing you to level down and grind back to KL20. Don't worry though, getting back to KL20 is just 2 FATEs and 1 CE away (or gold farming a little bit).
 
-With that, the methods in which you can be raised are also extremely limited. So far, there are only two methods in which you can be raised:
+With that, the methods in which you can be raised are also extremely limited. So far, there are only two methods in which you can be raised are
 1. Phantom Chemist with the Raise ability (unlocked at level 3)
 2. Healer Limit Break 3.
 
@@ -82,13 +85,13 @@ Getting ready to enter Forked Tower: Blood requires you to complete a list of ob
 
 For a list of phantom jobs to focus, please consult the image below.
 <Image
-    src="/ft/pjobFocusing.png"
+    src="/ft/pJobFocusing_74.png"
     width="600"
     height="400"
     decoding="async"
     loading="eager"
-    alt="Demon Tablet Cheatsheet"
-    onclick="window.open('/ft/pjobFocusing.png','_blank')"
+    alt="pJobFocusing_74"
+    onclick="window.open('/ft/pJobFocusing_74.png','_blank')"
     style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
 />
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
