--- a/src/content/docs/crescent/occult.mdx
+++ b/src/content/docs/crescent/occult.mdx
@@ -123,14 +123,33 @@ their respective coffer.
 <br></br>
 <hr></hr>
 ## Fortune Carrots
-The Happy Bunnies do make a grand return in the form of Fortune Carrots. Sometimes when exploring around Occult Crescent you will run across a half-eaten, glowing carrot on the ground.
-If you are so lucky enough to have a Fortune Carrot item in your inventory, you can use this near said floor-carrot to spawn a Happy Bunny who will thank you with a golden coffer!
-This coffer contains materia, 1,000 Enlightenment Silver Pieces, and 1,600 Enlightenment Gold Pieces.
+Very rarely you can obtain Fortune Carrots from Bronze/Silver coffers and any rarity of pot chest. 
 
-Currently, Fortune Carrots *only* drop from the random bronze coffers that appear around
-Occult Crescent, from Persistent Pot coffers, or you could get refunded a carrot from the bunny coffer you just opened!
+To redeem a Fortune Carrot, you must find and stand near a half-eaten ground carrot that are in random, pre-determined spots throughout Occult Crescent.
+<Image
+    src="/oc/bunny.png"
+    width="600"
+    height="400"
+    decoding="async"
+    loading="eager"
+    alt="Crystal Paste Values"
+    onclick="window.open('/oc/bunny.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
 
-:::caution[Bunny Coffer Drop Rates]
+When standing near one, you can use the Fortune Carrot like you would any other item from your inventory and if done correctly, a Happy Bunny will appear and reward you with a gold chest. 
+This chest contains 1,000 silver, 1,600 gold, 200,000 gil, and an assortment of other rare items.
+### How Carrot Spawns Work.
+- 2 Carrots can be on the map at a time at random, pre-determined spots
+  - These are per-instance, so you can leave instance and join a new one to get completely different carrot spots
+- These 2 carrots are visible by all players
+  - Light competition as anyone can visit a carrot spot and use it
+- If a player uses a carrot another will instantly respawn in a spot where there is not a carrot
+  - This includes the spot where a carrot *just* was (meaning you can chain together multiple - <a href="https://youtu.be/1P76wrOBgkc" target="_blank">Video of a carrot chain</a>)
+
+
+:::caution[Bunny Coffer Loot Table]
 You can visit <a href="https://gacha.infi.ovh/occult/?territory=3&coffer=2012936" target="_blank">Infi's Gacha Website</a> o see what items can drop from both kinds of coffers and how rare each item is from
 their respective coffer.
 :::
@@ -214,35 +233,5 @@ different rings both with Crit AND Determination)
 Having a perfectly made best in slot set is NOT required to do anything in Occult Crescent or progress in Forked Tower. Some Forked Tower groups may *ask* for an amount of gear, but its only to help make
 DPS checks a little more lenient for the whole group.
 :::
-<br></br>
-<details>
-<summary>Open to see all currently available BiS sheets</summary>
-#### Tanks
-- <a href="https://xivgear.app/?page=sl%7C9ac01a54-51cb-429f-87ff-7cc5e4ca4b5d" target="_blank">Paladin</a> (by Celery)
-- <a href="https://xivgear.app/?page=sl%7Cfdef7aa9-63c4-4a21-a662-80e89c2b47dd" target="_blank">Warrior</a> (from The Balance)
-- <a href="https://xivgear.app/?page=sl%7C2f50f25f-7407-4e54-abbb-cf117dddb657" target="_blank">Dark Knight</a> (by Lynn)
-- <a href="https://xivgear.app/?page=sl%7C237219c9-daff-4ace-8e9a-44488b90b23d" target="_blank">Gunbreaker</a> (by Lynn and Faes) - has 2.5 and 2.45 sets
-#### Healers
-- <a href="https://xivgear.app/?page=sl%7C878e5ad1-9c60-4f77-b556-01c07cba90bb" target="_blank">Omni-Healer</a> (by meyneth3767)
-- <a href="https://xivgear.app/?page=sl%7C744bad81-184d-47fd-9d7d-f489971bcb0c" target="_blank">Scholar</a> (by Celery)
-#### Melee
-- <a href="https://xivgear.app/?page=sl%7Ce7d88947-4cf9-49c6-bbf7-92d6567625a8" target="_blank">Viper</a> (by Ref/Celery)
-- <a href="https://xivgear.app/?page=sl%7Ce40d37a2-cdfe-4750-9a2d-c9b0b2f8c238" target="_blank">Ninja</a> (by Celery)
-- <a href="https://xivgear.app/?page=sl%7C67d9c5cd-dc1f-45c6-8d66-e3708683c255" target="_blank">Dragoon</a> (by Lynn/Celery) - Reaper compatible with minimal losses.
-- <a href="https://xivgear.app/?page=sl%7Ced61963e-702a-4fe0-bccf-5895118d8baa" target="_blank">Reaper</a> (by Lynn) - DRG compatible with minimal losses.
-- <a href="https://xivgear.app/?page=sl%7Cf0ab23e1-840d-464e-a6fa-34649ae11d02" target="_blank">Monk</a> (from The Balance)
-- <a href="https://xivgear.app/?page=sl%7Ccb683646-ae3b-473f-82da-86b1c537b3b0" target="_blank">Samurai</a> (by Ilya and Celery)
-#### Phys. Ranged
-- <a href="https://xivgear.app/?page=sl%7Cd9bfb443-e62d-4744-be6b-ef3d41015b15" target="_blank">Bard</a> (by Shady/mortia)
-- <a href="https://xivgear.app/?page=sl%7Cbf1a8d8c-0cd7-4469-b096-0fb691b9fecc" target="_blank">Dancer</a> (by mortia)
-- <a href="https://xivgear.app/?page=sl|b60e60e1-7ce9-467d-9eda-1a9b9e101368" target="_blank">Machinst</a> (by mortia)
-#### Caster
-- <a href="https://xivgear.app/?page=sl%7Cc487f0df-6f9f-4daf-b0b2-54863c1c8202" target="_blank">Black Mage</a> (by Ilya)
-- <a href="https://xivgear.app/?page=sl%7C8c6b1aeb-1799-4153-9aaf-fe3595d08458" target="_blank">Summoner</a> (from The Balance)
-- <a href="https://xivgear.app/?page=sl|6424d2e4-f692-4d6a-82f2-42c74a248783" target="_blank">Pictomancer</a> (from The Balance)
-- <a href="https://xivgear.app/?page=sl%7C12902033-46d7-41be-b0c0-925b541b6329" target="_blank">Red Mage</a> (by Cyn - more credits on sheet)
-
-Your job missing? Want to see it added? Contact `@onlymlems` in Field Op Enjoyers [Discord](/others/discords)
-</details>
 <br></br>
 <hr></hr>
