--- a/src/content/docs/crescent/ocrelics.mdx
+++ b/src/content/docs/crescent/ocrelics.mdx
@@ -52,7 +52,7 @@ Refer to the table below to see which zone drops what Demiatma.
 |Orpiment | Living Memory| 
 </div>
 One you have obtains three of each type of the six demiatma, return to the Phantom Village and speak with Gerolt. From there the player can trade 500 uncapped level 100 tomestones
-for one *Arcanite;* three (1500 tomes total) of which are required to exchanged for you shiny new Penumbrae weapon. In total this step costs 31,500 tomes.
+for one *Arcanite;* three (1500 tomes total) of which are required to exchanged for you shiny new Penumbrae weapon. In total this step costs 31,500 tomes for all 21 weapons.
 
 <br></br>
 <hr></hr>
@@ -93,10 +93,60 @@ Depsite this being the relic quest for Phantom Weapons: **No progress can be mad
 
 
 When the Aetherwells step is completed, return to the Phantom Village and speak to Gerolt. From there the player can trade 500 uncapped level 100 tomestones
-for one *Waxing Arcanite;* three of which (1500 tomes total), along with your Penumbrae weapon of choice, are required to exchanged for you shiny new Umbrae weapon. In total this step costs 31,500 tomes.
+for one *Waxing Arcanite;* three of which (1500 tomes total), along with your Penumbrae weapon of choice, are required to exchanged for you shiny new Umbrae weapon. In total this step costs 31,500 tomes for all 21 weapons.
 <br></br>
 <hr></hr>
-## 7.4x: ???
+## 7.41: Obscurum Weapons
+Starts in the Phantom Village at the forge with the quest "Timeworn Techniques". They will task you with obtaining a handful of items from various places in Dawntrail zones. Specifically:
+1. Umbral Clay from a vendor in Tuliyollal at (13.1, 12.7). It costs 500,000 gil.
+2. 3 Craftable Items - Items can also be bought off the marketboards.
+   - <a href="https://na.finalfantasyxiv.com/lodestone/playguide/db/item/74578fa25c1/" target="_blank">Aspected Aether Agglomerate</a>
+   - <a href="https://na.finalfantasyxiv.com/lodestone/playguide/db/item/d721d95779e/" target="_blank">Aspected Aetheroconductor</a>
+   - <a href="https://na.finalfantasyxiv.com/lodestone/playguide/db/item/544f22d23c7/" target="_blank">Aspected Aetherocatalyst</a>
+
+
+After you have gathered the 4 items, return to Gerolt to start "In Pursuit of Perfection"
+
+### One-Time Grind: Crystal Paste
+Talking with Gerolt again after finishing "Timeworn Techniques" you will be tasked with gathering **Crystal Paste** to help improve Gerolt's tools.
+
+**Crystal Paste** can be earned by doing various duties around Eorzea. You can see which duties are eligable to recieve **Crystal Paste** by looking through the newly obtained *"Phantom Glass"* in your Key Items section of your inventory. Among these include: 
+- Critical Encounters in Occult Crescent (Forked Tower: Blood is excluded)
+  - This is just for CEs, *FATEs do not reward Crystal Paste.*
+- Roulettes
+  - Leveling
+  - Level Cap
+  - Expert
+- Arcadion Heavyweight Raids
+  - Normal or Savage counts!
+- Pilgrim's Traverse
+  - The amount of paste earned increasing with higher floor sets.
+- The Final Verse (Quantum)
+- Dawntrail Overworld FATEs
+
+Each category/duty rewarding a different amount of Crystal Paste upon completion. You can find the amount of Crystal Paste each duty rewards in this image
+<Image
+    src="/oc/paste_values.png"
+    width="600"
+    height="400"
+    decoding="async"
+    loading="eager"
+    alt="Crystal Paste Values"
+    onclick="window.open('/oc/paste_values.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+
+
+In total you will need **1,200** Crystal Paste and at various paste milestones (100, 300, 600, and 1200 total paste), you will be asked to return to Gerolt for some cutscenes and story. 
+
+:::note[Overcapping Paste]
+You can collect all **1,200** Crystal Paste before ever returning to 
+Gerolt if you choose. Obtaining the required paste on one step does not prevent you from getting more.
+:::
+
+When the Crystal Paste step is completed, return to the Phantom Village and speak to Gerolt. From there the player can trade 500 uncapped level 100 tomestones
+for one *Waning Arcanite;* three of which (1500 tomes total), along with your Umbrae weapon of choice, are required to exchanged for you shiny new Obscurum weapon. In total this step costs 31,500 tomes for all 21 weapons.
 <br></br>
 <hr></hr>
 ## 7.5x: ???
