--- a/src/content/docs/crescent/southhorn.mdx
+++ b/src/content/docs/crescent/southhorn.mdx
@@ -176,6 +176,7 @@ These CEs will spawn randomly over time. These have a ~120 minute (2 hours) cool
 | The Unbridled           | Crescent Berserker| Berserker Soul Shard |
 | Eternal Watch           | Repaired Lion     | n/a |
 | Trial by Claw           | Crystal Dragon    | n/a |
+| Flames of Dusk          | Hinkypunk         | n/a |
 </div>
 
 ### Player Spawned CEs
