Large updates to many pages

--- a/src/content/docs/crescent/southhorn.mdx
+++ b/src/content/docs/crescent/southhorn.mdx
@@ -80,7 +80,7 @@ Enlightenment Silver Pieces are *only* earned by doing FATEs, CEs, and opening p
 Silver pieces are primarily used for both purchasing and augmented Arcanaut's gear.
 You can see a full list of items available to purchase by visiting the Expedition Antiquarian in base camp. Noteable items include:
 <details>
-<summary>Noteable Silver Items to Buy</summary>
+<summary>Noteable Silver Purchases</summary>
 <div style="display:flex; justify-content: center;">
 | Item | Cost | Use |
 | :---: | :---: | :--: |
@@ -88,6 +88,8 @@ You can see a full list of items available to purchase by visiting the Expeditio
 | **Ph. Cannoneer** | 1,000 | Strong AoE damage. Has stronger/longer trick attack. Perfect for gold farming! | 
 | **Ph. Time Mage** | 1,000 | Slows/dispels mobs, hastens yourself or allies. Required for Forked Tower. | 
 | **Ph. Chemist** | 1,000 | Healing, MP refills, and the only way to raise people in Forked Tower. | 
+| **Ph. Dancer** | 1,000 | Has powerful, unique dances and can debuff bosses for 5% extra damage. | 
+| **Ph. Mystic Knight** | 1,000 | Many strong skills. Has a personal 5% buff that also inflicts a 5% debuff on bosses. | 
 | **Aetherspun Silver** | 1,200 | Used in augmented Arcanaut's gear from base to the +1 variant. | 
 | **Sanguine Ciphers** |  600 | Used to enter Forked Tower: Blood. |
 | **Ancient Airship** | 5,000 | 4-seater mount. Definitely save this for last! | 
@@ -111,15 +113,16 @@ When above a chain of 20, any gold earned will be doubled! So keep that chain go
 Gold pieces are primarily used for purcahse **Aetherial Fixatives** for augmenting Arcanaut's gear.
 You can see a full list of items available to purchase by visiting the Expedition Antiquarian in base camp. Noteable items include:
 <details>
-<summary>Noteable Gold Items to Buy</summary>
+<summary>Noteable Gold Purchases</summary>
 <div style="display:flex; justify-content: center;">
 | Item | Cost | Use |
 | :---: | :---: | :--: |
 | **Ph. Samurai** |  1,000 | Strongest DPS option in Occult Crescent right now. |
 | **Ph. Geomancer** | 1,000 | Damage Buff/Healing Bells. Can Suspend self/party. Required for Forked Tower | 
 | **Ph. Thief** |  1,000 | Healing, MP refills, and the only way to raise people in Forked Tower. |
+| **Ph. Gladitor** |  1,000 | Similar damage to ph. Samurai, requires ramp up with its skills. |
 | **Aetherial Fixatives** | 3,000 | Used in augmented Arcanaut's gear from base to the +1 variant. | 
-| **Sanguine Ciphers** |  960 | Used to enter Forked Tower. Costs 960 gold but accumulates fast when farming in a dedicated group. |
+| **Sanguine Ciphers** |  320 | Used to enter Forked Tower: Blood. |
 | **Coffers/Potions** | 50 | Items used by Ph. Samurais/Chemists. Alternative to spending gil if no other uses for gold. | 
 </div>
 </details>
@@ -131,7 +134,7 @@ per clear. Sanguinite is mostly used to purchase X-Fixatives which are used in a
 You can see a full list of items available to purchase by visiting the Expedition Antiquarian in base camp. Noteable items include:
 
 <details>
-<summary>Noteable Sanguinite Items to Buy</summary>
+<summary>Noteable Sanguinite Purchases</summary>
 <div style="display:flex; justify-content: center;">
 | Item | Cost | Use |
 | :---: | :---: | :--: |
@@ -147,7 +150,7 @@ You can see a full list of items available to purchase by visiting the Expeditio
 <br></br>
 <hr></hr>
 ## Gold Farming
-Gold farming guide goes here: <a href="https://docs.google.com/document/d/1wlCr6ZTR_lnZhbO_1GmpC6oS9K2gaz2GKNJv8dV3zeI/edit?tab=t.39eab4nqlnk0" target="_blank">read more about gold farming</a>
+<a href="https://docs.google.com/document/d/1wlCr6ZTR_lnZhbO_1GmpC6oS9K2gaz2GKNJv8dV3zeI/edit?tab=t.39eab4nqlnk0" target="_blank">Read more about gold farming.</a> Guide contains both solo and group farming guides.
 
 <br></br>
 <hr></hr>
@@ -163,6 +166,7 @@ Every successful Critical Engagement will reward the following
  - 200 enlightenment silver pieces
  - 20% for a Demiatma (which demiatma dropping is zone dependent)
  - Field Notes (specified below)
+
 ### Randomly Spawning CEs
 These CEs will spawn randomly over time. These have a ~120 minute (2 hours) cooldown period before a specific CE can spawn again.
 <div style="display:flex; justify-content: center;">
