--- a/src/content/docs/crescent/occult.mdx
+++ b/src/content/docs/crescent/occult.mdx
@@ -89,14 +89,33 @@ These are spawned in by doing things such as completing FATEs, CEs, clearing For
 | FATEs     | 75%       | 7.5% |
 | CEs       | 100%      | 7.5% |
 | Chaining  | 10%       | 1%   |
-| FT: Blood | 2 always  | 1 spawns, 10% for another |
+| Forked Tower: Blood | 2 spawn  | 1 spawns, 10% for another |
 </div>
 
+In total, you can have 8 silvers and 30 bronzes spawned at one time. You can check the number of coffers currently available by using Phantom Freelancer's *Occult Treasuresight* anywhere while in Occult Crescent.
+Upon use you will be given an echo message stating how many silvers and bronzes are currently spawned, no locations are given.
 
-:::note[Coffer Drop Rates]
+Example: `You sense the presence of 1 silver coffer and 9 bronze coffers in the area!`
+
+:::note[Coffers Drop Table and Rates]
 You can visit <a href="https://gacha.infi.ovh/occult/?territory=1&coffer=1596" target="_blank">Infi's Gacha Website</a> to see what items can drop from both kinds of coffers and how rare each item is from
 their respective coffer.
 :::
+
+### Bronze/Silver Coffer Locations
+Map showcases all possible spawn locations for the 8 silvers and 60 bronze locations. All bronze locations have an equal chance of spawning.
+<Image
+    src="/oc/chest_spots.png"
+    width="600"
+    height="400"
+    decoding="async"
+    loading="eager"
+    alt="chest_spots"
+    onclick="window.open('/oc/chest_spots.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+
 
 <br></br>
 <hr></hr>
@@ -115,10 +134,43 @@ more and more rewards. As of 7.3, pots will now give both enlightenment silver a
 On rare occasions (~10% of the time), the pot companion will stick around and will offer to take you to *another* hidden coffer. You should take them up on this offer because these 
 "double ups" will **always** garauntee a gold coffer.
 
-:::tip[Pots Drop Rates]
-You can visit <a href="https://gacha.infi.ovh/occult/?territory=2&coffer=2014743" target="_blank">Infi's Gacha Website</a> o see what items can drop from both kinds of coffers and how rare each item is from
+:::tip[Pots Drop Table and Rates]
+You can visit <a href="https://gacha.infi.ovh/occult/?territory=2&coffer=2014743" target="_blank">Infi's Gacha Website</a> to see what items can drop from both kinds of coffers and how rare each item is from
 their respective coffer.
 :::
+
+### Pot Chest Locations
+Below is a map showcasing all potential pot locations. There are 80 chest locations in total, 30 for the North FATE and 30 for the South FATE; both of which are denoted with a golden chest icon. 
+The remaining 20 are for second chance pots; these are noted by the more bronze coffer icon. 
+<Image
+    src="/oc/pot_spots.png"
+    width="600"
+    height="400"
+    decoding="async"
+    loading="eager"
+    alt="pot_spots"
+    onclick="window.open('/oc/pot_spots.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+
+### Quick Pots Map
+Based on which Pot FATE you just completed (north left, south right), you can immediately use your Magical Elixir and get an immediate sense on where your pot might take you! Simply match the color of 
+dots with the initial direction, and you can garauntee that your pot will take you to one of those similarly colored dots. 
+
+Example: Finishing the North pots FATE (using the left image) and sensing something East means I can head towards the group of pink dots, stand in the center of the pink dots, use my elixir once again, and almost immediately know where my pot chest is!
+
+<Image
+    src="/oc/pots_quickmap.png"
+    width="600"
+    height="400"
+    decoding="async"
+    loading="eager"
+    alt="pots_quickmap"
+    onclick="window.open('/oc/pots_quickmap.png','_blank')"
+    style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
+/>
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
 
 <br></br>
 <hr></hr>
@@ -126,6 +178,15 @@ their respective coffer.
 Very rarely you can obtain Fortune Carrots from Bronze/Silver coffers and any rarity of pot chest. 
 
 To redeem a Fortune Carrot, you must find and stand near a half-eaten ground carrot that are in random, pre-determined spots throughout Occult Crescent.
+Upon use, a Happy Bunny will appear and reward you with a gold chest. This chest contains 1000 silver, 1600 gold, 200k gil, and an assortment of other rare items.
+
+:::caution[Bunny Coffer Drop Table and Rates]
+You can visit <a href="https://gacha.infi.ovh/occult/?territory=3&coffer=2012936" target="_blank">Infi's Gacha Website</a> to see what items can drop from both kinds of coffers and how rare each item is from
+their respective coffer.
+:::
+
+### Fortune Carrots Locations
+Map showcases each pre-deteremined spot where a carrot could spawn.
 <Image
     src="/oc/bunny.png"
     width="600"
@@ -138,100 +199,10 @@ To redeem a Fortune Carrot, you must find and stand near a half-eaten ground car
 />
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
 
-When standing near one, you can use the Fortune Carrot like you would any other item from your inventory and if done correctly, a Happy Bunny will appear and reward you with a gold chest. 
-This chest contains 1,000 silver, 1,600 gold, 200,000 gil, and an assortment of other rare items.
-### How Carrot Spawns Work.
+### How Carrot Spawns Work
 - 2 Carrots can be on the map at a time at random, pre-determined spots
   - These are per-instance, so you can leave instance and join a new one to get completely different carrot spots
 - These 2 carrots are visible by all players
   - Light competition as anyone can visit a carrot spot and use it
 - If a player uses a carrot another will instantly respawn in a spot where there is not a carrot
   - This includes the spot where a carrot *just* was (meaning you can chain together multiple - <a href="https://youtu.be/1P76wrOBgkc" target="_blank">Video of a carrot chain</a>)
-
-
-:::caution[Bunny Coffer Loot Table]
-You can visit <a href="https://gacha.infi.ovh/occult/?territory=3&coffer=2012936" target="_blank">Infi's Gacha Website</a> o see what items can drop from both kinds of coffers and how rare each item is from
-their respective coffer.
-:::
-
-<br></br>
-<hr></hr>
-## Gearing
-Each Field Op features a brand new armor set that has it's own unique set of effects specific for that zone. This time we have the ilvl 745 armor called Arcanaut's 
-Gear which features a main stat bonuses and a stat called "Special Attribute". 
-
-:::note[What is Special Attribute?]
-This "Special Attribute" stat increases phantom job action damage by ~1% for every point you have equipped, 
-currently maxing out around +15 in total with a full set of Arcanaut's +2 gear. 
-:::
-
-You can purchase all 7 sets of Arcanaut's gear from the Expedition Antiquarian in Base Camp for 4,000 Enlightened Silver pieces for each separate armor piece. 
-This armor can also be upgraded at the Expedition Armorer to increase the amount of bonus main stat and special attribute given.
-
-:::danger[Melding Arcanaut's Gear]
-Arcanaut's gear can be melded but the melds will not work inside the South Horn since the zone syncs your item level to 700. 
-This will, similar to all cases of item level syncing in FFXIV, disables any materia in gear that is greater than the ilvl sync of an instance/zone. 
-However any pieces at or below i700 (such as Neo-Kingdom accessories) still allow their materia to function as normal. 
-Many Best in Slots sets will feature these pieces so make sure you keep up on your daily/weekly hunts!
-:::
-
-### Upgrading Arcanaut's Gear
-For now, you can purchase upgrade materials from Expedition Antiquarian for both silver, gold and the Forked Tower: Blood exclusive Sanguinite. 
-
-Each upgrade increases the main stat by +40 and grants one point of special attirbute each. Below is a list of required materials you must present, 
-along with the armor piece itself, to the Expedition Armorer in Base Camp.
-
-To upgrade a piece from base to +1 you need...
-<div style="display:flex; justify-content: center;">
-| Item | Amount | Cost |
-| :--: | :--: | :--: |
-| Base Arcanut's | 1 | 4,000 silver |
-| Aetherspun Silver | 3 | 3,600 silver |
-| Aetherial Fixative | 3 | 4,800 gold |
-</div>
-
-To upgrade a piece from +1 to +2 you need...
-<div style="display:flex; justify-content: center;">
-| Item | Amount | Cost |
-| :--: | :--: | :--: |
-| Arcanaut's +1 | 1 | See above table |
-| Aetherspun Gold | 3 | Random Coffer Drop|
-| X-Fixative | 6 | 60 Sanguinite |
-</div>
-
-<details>
-<summary>Open to see costs for a singular full set and all 7 sets</summary>
-In total each set will run you...
-<div style="display:flex; justify-content: center;">
-| Item/Currency | Amount |
-| :--: | :--: |
-| Silver | 38,000 |
-| Gold | 24,000 |
-| Aetherspun Gold | 15 |
-| Sanguinite | 300 |
-</div>
-
-All 7 sets costs...
-<div style="display:flex; justify-content: center;">
-| Item/Currency | Amount |
-| :--: | :--: |
-| Silver | 266,000 |
-| Gold | 168,000 |
-| Aetherspun Gold | 105 |
-| Sanguinite | 2100 |
-</div>
-</details>
-
-### Best in Slot
-Best in slot of Occult Crescent is maximizing the amount of Special Attibute you have. This is currently achieved by wearing a full set of Arcanaut's gear and augmenting it to the +2 version. 
-At max, you should have an extra 600 main stat and 15 special attribute or ~15% more damage on phantom actions. Some best in slots will also feature various pieces of Neo-Kingdom gear as its
-item level sits right at 700. Allowing materia to be melded and active while inside Occult Crescent. Any non-Neo Kingdom pieces can be substituted for an item of similar substats (Ex: two
-different rings both with Crit AND Determination)
-:::caution[Is Best In Slot Required?]
-**No.** 
-
-Having a perfectly made best in slot set is NOT required to do anything in Occult Crescent or progress in Forked Tower. Some Forked Tower groups may *ask* for an amount of gear, but its only to help make
-DPS checks a little more lenient for the whole group.
-:::
-<br></br>
-<hr></hr>
