Fixed some silly typos and wording

--- a/src/content/docs/crescent/ocrelics.mdx
+++ b/src/content/docs/crescent/ocrelics.mdx
@@ -87,7 +87,7 @@ Each bonus is worth:
 - Alliance Raid: 101 points
 :::
 
-:::danger[Progress Only Through Roulettes...]
+:::danger[Progression Only Through Roulettes...]
 Depsite this being the relic quest for Phantom Weapons: **No progress can be made on this step through Occult Crescent.**
 :::
 
