--- a/src/content/docs/crescent/southhorn.mdx
+++ b/src/content/docs/crescent/southhorn.mdx
@@ -15,7 +15,7 @@ While information is here and accurate enough to be deployed, the page is not ye
 :::
 
 This is the first zone of the Occult Crescent released in patch 7.25 and contains many FATEs, Critical Engagements, and the Forked Tower: Blood. This zone also contains the first half of the
-story and is not gated by completing the Forked Tower: Blood. 
+story. Completion of the story is not gated by clear the Forked Tower: Blood. 
 
 <br></br>
 <hr></hr>
@@ -102,9 +102,8 @@ Enlightenment Gold Pieces are *only* earned by chaining mobs or opening pot/bunn
 | Activity | Amount Earned |
 | :---: | :---: |
 | **Mobs** | Varied, higher level = more gold |
-| **Crit. Engagements** | 200 |
 | **Pot Chests** | 160/480/1,600 |
-| **Bunny Chests** | 1,600|
+| **Bunny Chests** | 1,600 |
 </div>
 :::note[Gold Increase from Chaining]
 When above a chain of 20, any gold earned will be doubled! So keep that chain going for as long as possible!
